# GigaAM-WebUI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/vad/: config.yaml
src/: main.py
src/templates/: index.html
