[project]
name = "gigaam-ui"
version = "0.1.0"
description = "GigaAM-WebUI"
authors = [
    {name = "Anton Zotov",email = "antzotik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "torch<=2.5.1",
    # "torchaudio<=2.5.1",
    "gigaam (>=0.1.0,<0.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "onnxruntime==1.17.3",
    "numpy==1.26.4",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pyannote-audio==3.3.2",
    "python-multipart (>=0.0.20,<0.0.21)"
]
[tool.poetry]
packages = [
    { include = "src"},
]

# [[tool.poetry.source]]
# name = "torch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "explicit"


[tool.poetry.extras]
torch-cpu = ["torch", "torchaudio"]
torch-cuda = ["torch", "torchaudio"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
